bug fixes and polish final